Feature Update: Added Activity Log

--- a/index.html
+++ b/index.html
@@ -61,5 +61,13 @@
             <button onclick="window.location.href='dubai_leads_sample.csv'" class="bg-green-600 px-12 py-4 rounded-full text-xl font-bold hover:bg-green-700 transition">Download Global CSV</button>
         </div>
     </div>
+        <div class="frame mt-8">
+            <h2 class="text-xl font-bold text-blue-400 mb-4 uppercase">System Activity Log</h2>
+            <div id="activity-log" class="log h-32 overflow-y-auto">
+                [SYSTEM READY] Monitoring Dubai Real Estate...<br>
+                [OSINT ACTIVE] Scanning for New Verified Agents...<br>
+                [DATA PUSH] Synced with GitHub at 08:38:05
+            </div>
+        </div>
 </body>
 </html>
